--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.22 08:23:16<br />
+<b>start</b> - 2023.01.22 17:50:23<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.07396449704143038<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
-Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -37.27<br />
+Hungary_TatabanyaBlackhole, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 29<br />
+Hungary_VotiveChurch, not updated, -36.330000000000005<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -30,7 +30,7 @@ Netherlands_TeaAtGrandma kihagyva (100%), <br />
 Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
-USA_GreenvilleGreenWave, <b>updated</b>, 458, <a href="https://www.munzee.com/map/dp5u47vck/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleGreenWave.json" target="_blank">json</a><br />
+USA_GreenvilleGreenWave, not updated, 0.0<br />
 Australia_QueensGambit-Horse, not updated, 0.46728971962616583<br />
 USA_CommerceBarnyard kihagyva (100%), <br />
 USA_UtahBeehive, not updated, 0.0<br />
@@ -50,7 +50,7 @@ Lithuania_KaunasBasketball, not updated, 0.0<br />
 Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 1.0<br />
 Belgium_KnokkeHeist, not updated, 0.5<br />
-Hungary_Evolution, not updated, 0.8333333333333286<br />
+Hungary_Evolution, not updated, 0.9722222222222143<br />
 Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
@@ -279,7 +279,7 @@ Germany_PaulTheFab43, not updated, 0.9299999999999926<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
-Hungary_StroopwafelInvasionInFelsogalla, <b>updated</b>, 94, <a href="https://www.munzee.com/map/u2mn7yzxz/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_StroopwafelInvasionInFelsogalla.json" target="_blank">json</a><br />
+Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
 Hungary_SZTE, not updated, -38.43<br />
 Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje kihagyva (100%), <br />
@@ -336,11 +336,11 @@ Canada_SecretLove kihagyva (100%), <br />
 Canada_LizzysGoldfish kihagyva (100%), <br />
 Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
 Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
-UnitedKingdom_StroopwafelInvasionInAndover, <b>updated</b>, 58, <a href="https://www.munzee.com/map/gcngq3xm7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInAndover.json" target="_blank">json</a><br />
+UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
 Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
-USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 67, <a href="https://www.munzee.com/map/dr095u8tn/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInFallingWaters.json" target="_blank">json</a><br />
-USA_StroopwafelInvasionInHagerstown, <b>updated</b>, 59, <a href="https://www.munzee.com/map/dr09wfndy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInHagerstown.json" target="_blank">json</a><br />
-Australia_StroopwafelInvasionInKelmscott, <b>updated</b>, 57, <a href="https://www.munzee.com/map/qd63rd421/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInKelmscott.json" target="_blank">json</a><br />
+USA_StroopwafelInvasionInFallingWaters, not updated, 0.0<br />
+USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
+Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
 UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
 Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
 Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
@@ -373,7 +373,7 @@ USA_MHQBash4Casino kihagyva (100%), <br />
 USA_MHQV4Pin kihagyva (100%), <br />
 USA_ZeeKnight, not updated, 0.0<br />
 USA_MichaelMyersHalloween, not updated, 0.0<br />
-USA_MunzeeLogoHistory2011, not updated, 0.0<br />
+USA_MunzeeLogoHistory2011, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
 USA_MunzeeLogoHistory2014, not updated, 0.0<br />
 USA_MunzeeLogoHistory2015, not updated, 0.0<br />
@@ -593,51 +593,51 @@ USA_DuluthAnchor kihagyva (100%), <br />
 USA_SunFlake, not updated, 0.0<br />
 USA_PrescottCardinals, not updated, 0.0<br />
 Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
-Denmark_AnimalFarmHilleroed, <b>updated</b>, 141, <a href="https://www.munzee.com/map/u3by0wys4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_AnimalFarmHilleroed.json" target="_blank">json</a><br />
-Denmark_EvolutionparkInRoskilde, <b>updated</b>, 429, <a href="https://www.munzee.com/map/u3bse1cwp/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_EvolutionparkInRoskilde.json" target="_blank">json</a><br />
-Denmark_ChristmastreeInHilleroed, <b>updated</b>, 193, <a href="https://www.munzee.com/map/u3bwpz4em/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_ChristmastreeInHilleroed.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_Drikkehorn, <b>updated</b>, 165, <a href="https://www.munzee.com/map/u3b6kzwtk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_Drikkehorn.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_FCMidtjylland, <b>updated</b>, 719, <a href="https://www.munzee.com/map/u1yr5xe7p/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_FCMidtjylland.json" target="_blank">json</a><br />
-Denmark_RandersRegnskov, <b>updated</b>, 858, <a href="https://www.munzee.com/map/u4p1hxjdu/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_RandersRegnskov.json" target="_blank">json</a><br />
-Denmark_RandersSnowy, <b>updated</b>, 167, <a href="https://www.munzee.com/map/u4p1j0qg2/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_RandersSnowy.json" target="_blank">json</a><br />
-Denmark_SonicRanders, <b>updated</b>, 174, <a href="https://www.munzee.com/map/u4p1kkb66/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SonicRanders.json" target="_blank">json</a><br />
-Denmark_FlatHammel, <b>updated</b>, 190, <a href="https://www.munzee.com/map/u4p003mrr/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_FlatHammel.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_GrenaaAmethyst, <b>updated</b>, 374, <a href="https://www.munzee.com/map/u4p8zxcm7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_GrenaaAmethyst.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_GrenaaBigAmethyst, <b>updated</b>, 275, <a href="https://www.munzee.com/map/u4p8znju6/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_GrenaaBigAmethyst.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_GrenaaFerry, <b>updated</b>, 747, <a href="https://www.munzee.com/map/u4pbbt4gq/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_GrenaaFerry.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_GrenaaSapphireAndAmethyst, <b>updated</b>, 238, <a href="https://www.munzee.com/map/u4p8zwhpp/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_GrenaaSapphireAndAmethyst.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_HeartOfValentine, <b>updated</b>, 248, <a href="https://www.munzee.com/map/u1zpbx2nw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_HeartOfValentine.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_Evolution2019Hammel, <b>updated</b>, 160, <a href="https://www.munzee.com/map/u4p008csn/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_Evolution2019Hammel.json" target="_blank">json</a><br />
-Denmark_NextStopTilst, <b>updated</b>, 246, <a href="https://www.munzee.com/map/u1zptuunw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_NextStopTilst.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_SilkeborgMario, <b>updated</b>, 180, <a href="https://www.munzee.com/map/u1yz3x8z1/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SilkeborgMario.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_TranbjergButterfly, <b>updated</b>, 274, <a href="https://www.munzee.com/map/u1zpn4juj/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_TranbjergButterfly.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_TrueForestFish, <b>updated</b>, 310, <a href="https://www.munzee.com/map/u1zptc9xn/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_TrueForestFish.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_TrueForestSurprise, <b>updated</b>, 366, <a href="https://www.munzee.com/map/u1zpw1bck/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_TrueForestSurprise.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_AppleInAarhus, <b>updated</b>, 179, <a href="https://www.munzee.com/map/u1zr85dyw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_AppleInAarhus.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_GardenOfJewels, <b>updated</b>, 122, <a href="https://www.munzee.com/map/u1zr85me8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_GardenOfJewels.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_OnyxCitrineParkInHammel, <b>updated</b>, 173, <a href="https://www.munzee.com/map/u4p002e26/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_OnyxCitrineParkInHammel.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_SilkeborgCoatOfArms, <b>updated</b>, 413, <a href="https://www.munzee.com/map/u1yz935f5/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SilkeborgCoatOfArms.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_SilkeborgRainbowUnicorn, <b>updated</b>, 193, <a href="https://www.munzee.com/map/u1yz90pxh/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SilkeborgRainbowUnicorn.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_SilkeborgHexagon, <b>updated</b>, 53, <a href="https://www.munzee.com/map/u1yz91p0q/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SilkeborgHexagon.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_SilkeborgOwl, <b>updated</b>, 101, <a href="https://www.munzee.com/map/u1yz929gr/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SilkeborgOwl.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_SilkeborgNightOwl, <b>updated</b>, 96, <a href="https://www.munzee.com/map/u1yz90x8u/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SilkeborgNightOwl.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_GrenaaHeart2022, <b>updated</b>, 130, <a href="https://www.munzee.com/map/u4p8zkw70/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_GrenaaHeart2022.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_PegasusLure, <b>updated</b>, 264, <a href="https://www.munzee.com/map/u10mrm5db/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_PegasusLure.json" target="_blank">json</a><br />
-USA_ValentineHeartCapeCanaveral, <b>updated</b>, 60, <a href="https://www.munzee.com/map/djn9mz3s4/16.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ValentineHeartCapeCanaveral.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_RIPQueenElizabethIICrown, <b>updated</b>, 565, <a href="https://www.munzee.com/map/gcpsf5c85/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_RIPQueenElizabethIICrown.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_ChallockChimp, <b>updated</b>, 648, <a href="https://www.munzee.com/map/u10ek7jr6/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_ChallockChimp.json" target="_blank">json</a><br />
-UnitedKingdom_LittleBurtonApple, <b>updated</b>, 107, <a href="https://www.munzee.com/map/u10eh36up/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_LittleBurtonApple.json" target="_blank">json</a><br />
-UnitedKingdom_AshfordKentClanWars, <b>updated</b>, 139, <a href="https://www.munzee.com/map/u10dgzhgs/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_AshfordKentClanWars.json" target="_blank">json</a><br />
-UnitedKingdom_AshfordVariety, <b>updated</b>, 128, <a href="https://www.munzee.com/map/u10dgtvx7/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_AshfordVariety.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_ShoeburyVirtuals, <b>updated</b>, 59, <a href="https://www.munzee.com/map/u10t1z1gj/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_ShoeburyVirtuals.json" target="_blank">json</a><br />
-UnitedKingdom_SCGVirtualField, <b>updated</b>, 498, <a href="https://www.munzee.com/map/u10t0j8cw/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SCGVirtualField.json" target="_blank">json</a><br />
-UnitedKingdom_KentQueensCrown, <b>updated</b>, 176, <a href="https://www.munzee.com/map/u10k2vf4s/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_KentQueensCrown.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_EvoPlusGarden, <b>updated</b>, 441, <a href="https://www.munzee.com/map/u10j3w0hv/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_EvoPlusGarden.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_Nipper, <b>updated</b>, 220, <a href="https://www.munzee.com/map/gcptn245e/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_Nipper.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_HayesRainbow, <b>updated</b>, 101, <a href="https://www.munzee.com/map/gcpsyqekv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HayesRainbow.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_UnionJack, <b>updated</b>, 159, <a href="https://www.munzee.com/map/gcpsvs5k3/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_UnionJack.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_SunnyRainbow, <b>updated</b>, 292, <a href="https://www.munzee.com/map/u10s19euj/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SunnyRainbow.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_MaattmoosMoo, <b>updated</b>, 97, <a href="https://www.munzee.com/map/u10s42d6w/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_MaattmoosMoo.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_LoveLanePatchwork, <b>updated</b>, 171, <a href="https://www.munzee.com/map/u10eus8mg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_LoveLanePatchwork.json" target="_blank">json</a><br />
-UnitedKingdom_FavershamCrossbow, <b>updated</b>, 100, <a href="https://www.munzee.com/map/u10eukvbt/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_FavershamCrossbow.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_RainbowHeart, <b>updated</b>, 178, <a href="https://www.munzee.com/map/u10gb0m7r/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_RainbowHeart.json" target="_blank">json</a> <b>100%</b><br />
+Denmark_AnimalFarmHilleroed, not updated, 0.0<br />
+Denmark_EvolutionparkInRoskilde, not updated, 0.0<br />
+Denmark_ChristmastreeInHilleroed kihagyva (100%), <br />
+Denmark_Drikkehorn kihagyva (100%), <br />
+Denmark_FCMidtjylland, not updated, 0.0<br />
+Denmark_RandersRegnskov, not updated, 0.0<br />
+Denmark_RandersSnowy, not updated, 0.0<br />
+Denmark_SonicRanders, not updated, 0.0<br />
+Denmark_FlatHammel kihagyva (100%), <br />
+Denmark_GrenaaAmethyst kihagyva (100%), <br />
+Denmark_GrenaaBigAmethyst kihagyva (100%), <br />
+Denmark_GrenaaFerry kihagyva (100%), <br />
+Denmark_GrenaaSapphireAndAmethyst kihagyva (100%), <br />
+Denmark_HeartOfValentine kihagyva (100%), <br />
+Denmark_Evolution2019Hammel, not updated, 0.0<br />
+Denmark_NextStopTilst kihagyva (100%), <br />
+Denmark_SilkeborgMario kihagyva (100%), <br />
+Denmark_TranbjergButterfly kihagyva (100%), <br />
+Denmark_TrueForestFish kihagyva (100%), <br />
+Denmark_TrueForestSurprise kihagyva (100%), <br />
+Denmark_AppleInAarhus kihagyva (100%), <br />
+Denmark_GardenOfJewels kihagyva (100%), <br />
+Denmark_OnyxCitrineParkInHammel kihagyva (100%), <br />
+Denmark_SilkeborgCoatOfArms kihagyva (100%), <br />
+Denmark_SilkeborgRainbowUnicorn kihagyva (100%), <br />
+Denmark_SilkeborgHexagon kihagyva (100%), <br />
+Denmark_SilkeborgOwl kihagyva (100%), <br />
+Denmark_SilkeborgNightOwl kihagyva (100%), <br />
+Denmark_GrenaaHeart2022 kihagyva (100%), <br />
+UnitedKingdom_PegasusLure, not updated, 0.0<br />
+USA_ValentineHeartCapeCanaveral kihagyva (100%), <br />
+UnitedKingdom_RIPQueenElizabethIICrown kihagyva (100%), <br />
+UnitedKingdom_ChallockChimp, not updated, 0.0<br />
+UnitedKingdom_LittleBurtonApple, not updated, 0.0<br />
+UnitedKingdom_AshfordKentClanWars, not updated, 0.0<br />
+UnitedKingdom_AshfordVariety kihagyva (100%), <br />
+UnitedKingdom_ShoeburyVirtuals, not updated, 0.0<br />
+UnitedKingdom_SCGVirtualField, not updated, 0.0<br />
+UnitedKingdom_KentQueensCrown kihagyva (100%), <br />
+UnitedKingdom_EvoPlusGarden kihagyva (100%), <br />
+UnitedKingdom_Nipper kihagyva (100%), <br />
+UnitedKingdom_HayesRainbow kihagyva (100%), <br />
+UnitedKingdom_UnionJack kihagyva (100%), <br />
+UnitedKingdom_SunnyRainbow kihagyva (100%), <br />
+UnitedKingdom_MaattmoosMoo kihagyva (100%), <br />
+UnitedKingdom_LoveLanePatchwork, not updated, 0.0<br />
+UnitedKingdom_FavershamCrossbow kihagyva (100%), <br />
+UnitedKingdom_RainbowHeart, <b>updated</b>, 167, <a href="https://www.munzee.com/map/u10gb0m7r/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_RainbowHeart.json" target="_blank">json</a> <b>100%</b><br />
