--- a/feladat.html
+++ b/feladat.html
@@ -642,3 +642,4 @@ UnitedKingdom_LoveLanePatchwork, not updated, 0.0<br />
 UnitedKingdom_FavershamCrossbow kihagyva (100%), <br />
 UnitedKingdom_RainbowHeart, <b>updated</b>, 167, <a href="https://www.munzee.com/map/u10gb0m7r/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_RainbowHeart.json" target="_blank">json</a> <b>100%</b><br />
 UnitedKingdom_CanterburyVictoriaPark, <b>updated</b>, 183, <a href="https://www.munzee.com/map/u10g8prc0/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_CanterburyVictoriaPark.json" target="_blank">json</a> <b>100%</b><br />
+UnitedKingdom_MrKnowItOwl, <b>updated</b>, 181, <a href="https://www.munzee.com/map/u10g8jd71/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_MrKnowItOwl.json" target="_blank">json</a><br />
