--- a/feladat.html
+++ b/feladat.html
@@ -668,3 +668,21 @@ UnitedKingdom_CromerEnglandSnowman, <b>updated</b>, 68, <a href="https://www.mun
 UnitedKingdom_HMSVictory, <b>updated</b>, 120, <a href="https://www.munzee.com/map/u1270xz7f/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HMSVictory.json" target="_blank">json</a><br />
 UnitedKingdom_RetroBunzee, <b>updated</b>, 240, <a href="https://www.munzee.com/map/u1270rj7d/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_RetroBunzee.json" target="_blank">json</a> <b>100%</b><br />
 UnitedKingdom_DenverWindmill, <b>updated</b>, 137, <a href="https://www.munzee.com/map/u1270tyw4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_DenverWindmill.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+Denmark_city_Grenaa, <b>updated</b>, <a href="https://www.munzee.com/map/u4p8zgw2n/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_city_Grenaa.json" target="_blank">json</a><br />
+Denmark_city_Hilleroed, <b>updated</b>, <a href="https://www.munzee.com/map/u3bwrbnce/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_city_Hilleroed.json" target="_blank">json</a><br />
+Hungary_city_Tatabanya, <b>updated</b>, <a href="https://www.munzee.com/map/u2mndxhne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Tatabanya.json" target="_blank">json</a><br />
+UnitedKingdom_city_London, <b>updated</b>, <a href="https://www.munzee.com/map/gcpvn9cq4/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_London.json" target="_blank">json</a><br />
+USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
+----felhasználók<br />
+Peter1980_all, <b>updated</b>, <a href="https://www.munzee.com/map/gcpsywswp/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Peter1980_all.json" target="_blank">json</a><br />
+Peter1980_completed, <b>updated</b>, <a href="https://www.munzee.com/map/gcpsyt1y9/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Peter1980_completed.json" target="_blank">json</a><br />
+----témák<br />
+World_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Australia_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/r1ps2ge1w/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+Hungary_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+UnitedKingdom_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/gcnhxpp6s/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+USA_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/9vgkbm7fn/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.01.22 19:40:25<br />
+összesen 6602<br />
