--- a/feladat.html
+++ b/feladat.html
@@ -1,10 +1,10 @@
-<b>start</b> - 2023.01.22 17:50:23<br />
+<b>start</b> - 2023.01.23 01:10:11<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.07396449704143038<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
-Hungary_TatabanyaBlackhole, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 29<br />
+Hungary_TatabanyaBlackhole, not updated, 0.0<br />
 Hungary_VotiveChurch, not updated, -36.330000000000005<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
@@ -373,7 +373,7 @@ USA_MHQBash4Casino kihagyva (100%), <br />
 USA_MHQV4Pin kihagyva (100%), <br />
 USA_ZeeKnight, not updated, 0.0<br />
 USA_MichaelMyersHalloween, not updated, 0.0<br />
-USA_MunzeeLogoHistory2011, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+USA_MunzeeLogoHistory2011, not updated, 0.0<br />
 USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
 USA_MunzeeLogoHistory2014, not updated, 0.0<br />
 USA_MunzeeLogoHistory2015, not updated, 0.0<br />
@@ -455,7 +455,7 @@ Lithuania_KaunasScatter2, not updated, 0.0<br />
 Lithuania_KaunasLightning, not updated, 0.0<br />
 Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
 Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
-Lithuania_KaunasMagnet, not updated, 0.0<br />
+Lithuania_KaunasMagnet, not updated, 0.35999999999999943<br />
 Lithuania_FebruaryEvent, not updated, 0.0<br />
 USA_TheLuckyFungi kihagyva (100%), <br />
 USA_SunAndMoon, not updated, 0.0<br />
@@ -640,49 +640,33 @@ UnitedKingdom_SunnyRainbow kihagyva (100%), <br />
 UnitedKingdom_MaattmoosMoo kihagyva (100%), <br />
 UnitedKingdom_LoveLanePatchwork, not updated, 0.0<br />
 UnitedKingdom_FavershamCrossbow kihagyva (100%), <br />
-UnitedKingdom_RainbowHeart, <b>updated</b>, 167, <a href="https://www.munzee.com/map/u10gb0m7r/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_RainbowHeart.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_CanterburyVictoriaPark, <b>updated</b>, 183, <a href="https://www.munzee.com/map/u10g8prc0/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_CanterburyVictoriaPark.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_MrKnowItOwl, <b>updated</b>, 181, <a href="https://www.munzee.com/map/u10g8jd71/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_MrKnowItOwl.json" target="_blank">json</a><br />
-UnitedKingdom_ChristmasGingerbreadMan, <b>updated</b>, 192, <a href="https://www.munzee.com/map/u12gkvmdg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_ChristmasGingerbreadMan.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_InMemoryOfPam, <b>updated</b>, 255, <a href="https://www.munzee.com/map/u12gt4cyv/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_InMemoryOfPam.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_LittleLotties1st, <b>updated</b>, 105, <a href="https://www.munzee.com/map/u134ceskk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_LittleLotties1st.json" target="_blank">json</a><br />
-UnitedKingdom_SuperpeggysVirtual, <b>updated</b>, 109, <a href="https://www.munzee.com/map/u134f33k3/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SuperpeggysVirtual.json" target="_blank">json</a><br />
-UnitedKingdom_HelpForHingham, <b>updated</b>, 81, <a href="https://www.munzee.com/map/u12en7fnd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HelpForHingham.json" target="_blank">json</a><br />
-UnitedKingdom_NotRudolph, <b>updated</b>, 226, <a href="https://www.munzee.com/map/u134x3bsx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_NotRudolph.json" target="_blank">json</a><br />
-UnitedKingdom_MadHatter, <b>updated</b>, 229, <a href="https://www.munzee.com/map/u134xd12c/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_MadHatter.json" target="_blank">json</a><br />
-UnitedKingdom_NVG, <b>updated</b>, 208, <a href="https://www.munzee.com/map/u134rx46d/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_NVG.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_EveryColour, <b>updated</b>, 71, <a href="https://www.munzee.com/map/u134rt8cr/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_EveryColour.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_NaomisSloth, <b>updated</b>, 110, <a href="https://www.munzee.com/map/u134rjr6e/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_NaomisSloth.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_VirtualJewels, <b>updated</b>, 73, <a href="https://www.munzee.com/map/u134rkmgd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_VirtualJewels.json" target="_blank">json</a><br />
-UnitedKingdom_WorsteadForNorkie, <b>updated</b>, 62, <a href="https://www.munzee.com/map/u13h20y1n/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WorsteadForNorkie.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_PercyThePenguinVisitsTheSeaside, <b>updated</b>, 462, <a href="https://www.munzee.com/map/u12vj96p3/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_PercyThePenguinVisitsTheSeaside.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_SeasideIcesInCromer, <b>updated</b>, 144, <a href="https://www.munzee.com/map/u12vj9w2c/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SeasideIcesInCromer.json" target="_blank">json</a><br />
-UnitedKingdom_RobinRedbreast, <b>updated</b>, 234, <a href="https://www.munzee.com/map/u12v5jy51/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_RobinRedbreast.json" target="_blank">json</a><br />
-UnitedKingdom_SheringhamJewelSquare, <b>updated</b>, 158, <a href="https://www.munzee.com/map/u12v5m5ps/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SheringhamJewelSquare.json" target="_blank">json</a><br />
-UnitedKingdom_IceCreamCone, <b>updated</b>, 100, <a href="https://www.munzee.com/map/u12v5t3b7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_IceCreamCone.json" target="_blank">json</a><br />
-UnitedKingdom_VirtualLove, <b>updated</b>, 126, <a href="https://www.munzee.com/map/u12v5ubbu/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_VirtualLove.json" target="_blank">json</a><br />
-UnitedKingdom_ShireHorseSanctuary, <b>updated</b>, 492, <a href="https://www.munzee.com/map/u12vhk7nm/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_ShireHorseSanctuary.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_ChalkReefScubaDiver, <b>updated</b>, 266, <a href="https://www.munzee.com/map/u12vhuhmb/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_ChalkReefScubaDiver.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_CromersGingerbreadMan, <b>updated</b>, 108, <a href="https://www.munzee.com/map/u12vjk6d6/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_CromersGingerbreadMan.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_CromerEnglandSnowman, <b>updated</b>, 68, <a href="https://www.munzee.com/map/u12vjewup/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_CromerEnglandSnowman.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_HMSVictory, <b>updated</b>, 120, <a href="https://www.munzee.com/map/u1270xz7f/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HMSVictory.json" target="_blank">json</a><br />
-UnitedKingdom_RetroBunzee, <b>updated</b>, 240, <a href="https://www.munzee.com/map/u1270rj7d/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_RetroBunzee.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_DenverWindmill, <b>updated</b>, 137, <a href="https://www.munzee.com/map/u1270tyw4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_DenverWindmill.json" target="_blank">json</a> <b>100%</b><br />
-----csoportok<br />
-----városok<br />
-Denmark_city_Grenaa, <b>updated</b>, <a href="https://www.munzee.com/map/u4p8zgw2n/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_city_Grenaa.json" target="_blank">json</a><br />
-Denmark_city_Hilleroed, <b>updated</b>, <a href="https://www.munzee.com/map/u3bwrbnce/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_city_Hilleroed.json" target="_blank">json</a><br />
-Hungary_city_Tatabanya, <b>updated</b>, <a href="https://www.munzee.com/map/u2mndxhne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Tatabanya.json" target="_blank">json</a><br />
-UnitedKingdom_city_London, <b>updated</b>, <a href="https://www.munzee.com/map/gcpvn9cq4/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_London.json" target="_blank">json</a><br />
-USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
-----felhasználók<br />
-Peter1980_all, <b>updated</b>, <a href="https://www.munzee.com/map/gcpsywswp/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Peter1980_all.json" target="_blank">json</a><br />
-Peter1980_completed, <b>updated</b>, <a href="https://www.munzee.com/map/gcpsyt1y9/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Peter1980_completed.json" target="_blank">json</a><br />
-----témák<br />
-World_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-Australia_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/r1ps2ge1w/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-Hungary_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-UnitedKingdom_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/gcnhxpp6s/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-USA_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/9vgkbm7fn/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-<b>stop</b> - 2023.01.22 19:40:25<br />
-összesen 6602<br />
+UnitedKingdom_RainbowHeart kihagyva (100%), <br />
+UnitedKingdom_CanterburyVictoriaPark kihagyva (100%), <br />
+UnitedKingdom_MrKnowItOwl, not updated, 0.0<br />
+UnitedKingdom_ChristmasGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_InMemoryOfPam kihagyva (100%), <br />
+UnitedKingdom_LittleLotties1st, not updated, 0.0<br />
+UnitedKingdom_SuperpeggysVirtual, not updated, 0.0<br />
+UnitedKingdom_HelpForHingham, not updated, 0.0<br />
+UnitedKingdom_NotRudolph, not updated, 0.0<br />
+UnitedKingdom_MadHatter, not updated, 0.0<br />
+UnitedKingdom_NVG kihagyva (100%), <br />
+UnitedKingdom_EveryColour kihagyva (100%), <br />
+UnitedKingdom_NaomisSloth kihagyva (100%), <br />
+UnitedKingdom_VirtualJewels, not updated, 0.0<br />
+UnitedKingdom_WorsteadForNorkie kihagyva (100%), <br />
+UnitedKingdom_PercyThePenguinVisitsTheSeaside kihagyva (100%), <br />
+UnitedKingdom_SeasideIcesInCromer, not updated, 0.0<br />
+UnitedKingdom_RobinRedbreast, not updated, 0.0<br />
+UnitedKingdom_SheringhamJewelSquare, not updated, 0.0<br />
+UnitedKingdom_IceCreamCone, not updated, 0.0<br />
+UnitedKingdom_VirtualLove, not updated, 0.0<br />
+UnitedKingdom_ShireHorseSanctuary kihagyva (100%), <br />
+UnitedKingdom_ChalkReefScubaDiver kihagyva (100%), <br />
+UnitedKingdom_CromersGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
+UnitedKingdom_HMSVictory, not updated, 0.0<br />
+UnitedKingdom_RetroBunzee kihagyva (100%), <br />
+UnitedKingdom_DenverWindmill kihagyva (100%), <br />
+<b>stop</b> - 2023.01.23 01:31:37<br />
+összesen 1286<br />
