--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.23 01:10:11<br />
+<b>start</b> - 2023.01.24 02:44:10<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.07396449704143038<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -36.330000000000005<br />
+Hungary_VotiveChurch, not updated, -37.10000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -57,7 +57,7 @@ Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.6999999999999886<br />
 Hungary_TaskasSmiley, not updated, 0.33112582781457434<br />
 Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
-Slovakia_FlagOfSlovakia, not updated, 0.18999999999999773<br />
+Slovakia_FlagOfSlovakia, not updated, 0.2799999999999976<br />
 Hungary_SurpriseAirline, not updated, 0.0<br />
 Hungary_RubiksCube, not updated, 0.0<br />
 Hungary_GyulaCastle, not updated, 0.0<br />
@@ -488,7 +488,7 @@ Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
 Germany_ErnieInVolksdorf, not updated, 0.0<br />
 Germany_Quietscheentchen kihagyva (100%), <br />
 Germany_Hammaburg, not updated, 0.0<br />
-Germany_FCStPauli, not updated, 0.0<br />
+Germany_FCStPauli, not updated, 0.060000000000002274<br />
 Germany_YinYangNeustadt, not updated, 0.0<br />
 Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
 Denmark_SoparkenMaribo kihagyva (100%), <br />
@@ -668,5 +668,28 @@ UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
 UnitedKingdom_HMSVictory, not updated, 0.0<br />
 UnitedKingdom_RetroBunzee kihagyva (100%), <br />
 UnitedKingdom_DenverWindmill kihagyva (100%), <br />
-<b>stop</b> - 2023.01.23 01:31:37<br />
-összesen 1286<br />
+----városok update<br />
+Denmark_city_Aarhus, <b>updated</b>, <a href="https://www.munzee.com/map/u1zptc9xn/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_city_Aarhus.json" target="_blank">json</a><br />
+Denmark_city_Hammel, <b>updated</b>, <a href="https://www.munzee.com/map/u1zpbx2nw/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_city_Hammel.json" target="_blank">json</a><br />
+Denmark_city_Silkeborg, <b>updated</b>, <a href="https://www.munzee.com/map/u1yz935ce/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_city_Silkeborg.json" target="_blank">json</a><br />
+UnitedKingdom_city_Cromer, <b>updated</b>, <a href="https://www.munzee.com/map/u12vje1zv/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_Cromer.json" target="_blank">json</a><br />
+UnitedKingdom_city_Lowestoft, <b>updated</b>, <a href="https://www.munzee.com/map/u134rt8cr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_Lowestoft.json" target="_blank">json</a><br />
+UnitedKingdom_city_Sheringham, <b>updated</b>, <a href="https://www.munzee.com/map/u12v57yrs/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_Sheringham.json" target="_blank">json</a><br />
+----felhasználók update<br />
+jacobsedk_all, <b>updated</b>, <a href="https://www.munzee.com/map/u1yz935ce/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/jacobsedk_all.json" target="_blank">json</a><br />
+jacobsedk_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u1yz3x8z1/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/jacobsedk_completed.json" target="_blank">json</a><br />
+jacobsedk_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u4p1j0qg2/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/jacobsedk_empty.json" target="_blank">json</a><br />
+Maattmoo_all, <b>updated</b>, <a href="https://www.munzee.com/map/u10s42d6w/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Maattmoo_all.json" target="_blank">json</a><br />
+Maattmoo_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u105sdvy2/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Maattmoo_GOTM.json" target="_blank">json</a><br />
+Maattmoo_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u10eumg3f/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Maattmoo_completed.json" target="_blank">json</a><br />
+Maattmoo_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u10eus8mg/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Maattmoo_empty.json" target="_blank">json</a><br />
+MetteS_all, <b>updated</b>, <a href="https://www.munzee.com/map/u1zptc9xn/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/MetteS_all.json" target="_blank">json</a><br />
+MetteS_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u4pbbjhsw/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/MetteS_GOTM.json" target="_blank">json</a><br />
+MetteS_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u1zpw1bck/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/MetteS_completed.json" target="_blank">json</a><br />
+MetteS_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u4p1hxjdu/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/MetteS_empty.json" target="_blank">json</a><br />
+RUJA_all, <b>updated</b>, <a href="https://www.munzee.com/map/u4pbbt4gq/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/RUJA_all.json" target="_blank">json</a><br />
+RUJA_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u4p8zgw2n/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/RUJA_GOTM.json" target="_blank">json</a><br />
+RUJA_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u4p8zwhpp/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/RUJA_completed.json" target="_blank">json</a><br />
+RUJA_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u4p1kkb66/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/RUJA_empty.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.01.24 03:06:25<br />
+összesen 1335<br />
