--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.25 01:10:12<br />
+<b>start</b> - 2023.01.26 01:10:11<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.07396449704143038<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -36.540000000000006<br />
+Hungary_VotiveChurch, not updated, -36.63000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -275,7 +275,7 @@ UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, not updated, 0.0<br />
 Germany_GeorgeTheFab42, not updated, 0.0<br />
-Germany_PaulTheFab43, not updated, 0.9299999999999926<br />
+Germany_PaulTheFab43, not updated, 1.0<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
@@ -414,7 +414,7 @@ Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
 Germany_AreYouXZeePerienced, not updated, 0.0<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
-Germany_AppenzellerSennenhundRT, not updated, 0.1700000000000017<br />
+Germany_AppenzellerSennenhundRT, not updated, 0.20000000000000284<br />
 Germany_PatchworkRT, not updated, 0.3200000000000003<br />
 Germany_FlatsAppenzellerRT, not updated, 0.4399999999999977<br />
 Germany_WeddingDay kihagyva (100%), <br />
@@ -658,15 +658,4 @@ UnitedKingdom_WorsteadForNorkie kihagyva (100%), <br />
 UnitedKingdom_PercyThePenguinVisitsTheSeaside kihagyva (100%), <br />
 UnitedKingdom_SeasideIcesInCromer, not updated, 0.0<br />
 UnitedKingdom_RobinRedbreast, not updated, 0.0<br />
-UnitedKingdom_SheringhamJewelSquare, not updated, 0.0<br />
-UnitedKingdom_IceCreamCone, not updated, 0.0<br />
-UnitedKingdom_VirtualLove, not updated, 0.0<br />
-UnitedKingdom_ShireHorseSanctuary kihagyva (100%), <br />
-UnitedKingdom_ChalkReefScubaDiver kihagyva (100%), <br />
-UnitedKingdom_CromersGingerbreadMan kihagyva (100%), <br />
-UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
-UnitedKingdom_HMSVictory, not updated, 0.0<br />
-UnitedKingdom_RetroBunzee kihagyva (100%), <br />
-UnitedKingdom_DenverWindmill kihagyva (100%), <br />
-<b>stop</b> - 2023.01.25 01:33:38<br />
-összesen 1406<br />
+UnitedKingdom_SheringhamJewelSquare, <b>updated</b>, 164, <a href="https://www.munzee.com/map/u12v5m5ps/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SheringhamJewelSquare.json" target="_blank">json</a><br />
