--- a/feladat.html
+++ b/feladat.html
@@ -659,3 +659,19 @@ UnitedKingdom_PercyThePenguinVisitsTheSeaside kihagyva (100%), <br />
 UnitedKingdom_SeasideIcesInCromer, not updated, 0.0<br />
 UnitedKingdom_RobinRedbreast, not updated, 0.0<br />
 UnitedKingdom_SheringhamJewelSquare, <b>updated</b>, 164, <a href="https://www.munzee.com/map/u12v5m5ps/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SheringhamJewelSquare.json" target="_blank">json</a><br />
+UnitedKingdom_IceCreamCone, not updated, 0.0<br />
+UnitedKingdom_VirtualLove, not updated, 0.0<br />
+UnitedKingdom_ShireHorseSanctuary kihagyva (100%), <br />
+UnitedKingdom_ChalkReefScubaDiver kihagyva (100%), <br />
+UnitedKingdom_CromersGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
+UnitedKingdom_HMSVictory, not updated, 0.0<br />
+UnitedKingdom_RetroBunzee kihagyva (100%), <br />
+UnitedKingdom_DenverWindmill kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+UnitedKingdom_city_Sheringham, <b>updated</b>, <a href="https://www.munzee.com/map/u12v57yrs/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_Sheringham.json" target="_blank">json</a><br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.26 01:36:04<br />
+összesen 1552<br />
