--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.27 01:10:10<br />
+<b>start</b> - 2023.01.27 08:32:38<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.07396449704143038<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -37.36000000000001<br />
+Hungary_VotiveChurch, not updated, -37.10000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -275,7 +275,7 @@ UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, not updated, 0.0<br />
 Germany_GeorgeTheFab42, not updated, 0.0<br />
-Germany_PaulTheFab43, <b>updated</b>, 1161, <a href="https://www.munzee.com/map/u0w7yrd1n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PaulTheFab43.json" target="_blank">json</a><br />
+Germany_PaulTheFab43, not updated, 0.0<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
@@ -419,7 +419,7 @@ Germany_PatchworkRT, not updated, 0.3200000000000003<br />
 Germany_FlatsAppenzellerRT, not updated, 0.4399999999999977<br />
 Germany_WeddingDay kihagyva (100%), <br />
 Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
-Germany_SportparkEvolutionsRT2, not updated, -0.5900000000000034<br />
+Germany_SportparkEvolutionsRT2, not updated, -0.8800000000000097<br />
 Germany_Peace, not updated, 0.0<br />
 Germany_PatchworkDusslingen, not updated, 0.0<br />
 USA_MunzeeMania2019, not updated, 0.0<br />
@@ -668,10 +668,10 @@ UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
 UnitedKingdom_HMSVictory, not updated, 0.0<br />
 UnitedKingdom_RetroBunzee kihagyva (100%), <br />
 UnitedKingdom_DenverWindmill kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-Germany_topic_TheFABInTubingen, <b>updated</b>, <a href="https://www.munzee.com/map/u0w7vzm9n/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_topic_TheFABInTubingen.json" target="_blank">json</a><br />
-<b>stop</b> - 2023.01.27 01:52:57<br />
-összesen 2566<br />
+Canada_AdventureGardenForBluestreek, <b>hiba</b> a táblázat megnyitásakor, INTERNAL, 16<br />
+----felhasználók update<br />
+tlmeadowlark_all, <b>updated</b>, <a href="https://www.munzee.com/map/djf8kbee5/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_all.json" target="_blank">json</a><br />
+tlmeadowlark_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/djf8m22fr/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_GOTM.json" target="_blank">json</a><br />
+tlmeadowlark_completed, <b>updated</b>, <a href="https://www.munzee.com/map/dnhdug6cs/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_completed.json" target="_blank">json</a><br />
+<b>stop</b> - 2023.01.27 08:58:10<br />
+összesen 1532<br />
