--- a/feladat.html
+++ b/feladat.html
@@ -669,3 +669,9 @@ UnitedKingdom_HMSVictory, not updated, 0.0<br />
 UnitedKingdom_RetroBunzee kihagyva (100%), <br />
 UnitedKingdom_DenverWindmill kihagyva (100%), <br />
 Canada_AdventureGardenForBluestreek, <b>updated</b>, 1611, <a href="https://www.munzee.com/map/c28xrw2g2/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_AdventureGardenForBluestreek.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.28 02:02:58<br />
+összesen 3165<br />
