--- a/feladat.html
+++ b/feladat.html
@@ -559,3 +559,121 @@ USA_NoelridgeMystery kihagyva (100%), <br />
 USA_WestDesMoinesStrawberry, not updated, 0.0<br />
 USA_WestDesMoinesShark, not updated, 0.0<br />
 USA_AltoonaEvos, <b>updated</b>, 92, <a href="https://www.munzee.com/map/9zmsbkdmd/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AltoonaEvos.json" target="_blank">json</a><br />
+USA_DSMHalloweenWitch, not updated, 0.0<br />
+USA_CRFrankenstein, not updated, 0.0<br />
+USA_ThomasParkFlats kihagyva (100%), <br />
+USA_IowaGoldfinch kihagyva (100%), <br />
+USA_Minion kihagyva (100%), <br />
+USA_FarmingtonTiger, not updated, 0.0<br />
+USA_CedarRapidsPumpkin kihagyva (100%), <br />
+USA_PuppyPlayPen, not updated, 0.0<br />
+USA_Burger kihagyva (100%), <br />
+USA_Pizza kihagyva (100%), <br />
+USA_StormtrooperSavage kihagyva (100%), <br />
+USA_Snoopy kihagyva (100%), <br />
+USA_JordanJ kihagyva (100%), <br />
+USA_Tulip kihagyva (100%), <br />
+USA_MOAMNCrossbow kihagyva (100%), <br />
+USA_MinnesotaM kihagyva (100%), <br />
+USA_HiawathaCrossbows kihagyva (100%), <br />
+USA_SuperBowlLII kihagyva (100%), <br />
+USA_EaglesVPatriots kihagyva (100%), <br />
+USA_StMarysBattlegroundWeapon kihagyva (100%), <br />
+USA_LRTSnowflake kihagyva (100%), <br />
+USA_HeartCrossbows kihagyva (100%), <br />
+USA_ComoParkShamrockWhite kihagyva (100%), <br />
+USA_ComoParkShamrockBlue, not updated, 0.0<br />
+USA_StPaulShamrock kihagyva (100%), <br />
+USA_BirthdayClown kihagyva (100%), <br />
+USA_LongLakeButterflies kihagyva (100%), <br />
+USA_FleurDeLis, not updated, 0.0<br />
+USA_HutchinsonSnowflake kihagyva (100%), <br />
+USA_RochestersCornWaterTower, not updated, 0.0<br />
+USA_DuluthAnchor kihagyva (100%), <br />
+USA_SunFlake, not updated, 0.0<br />
+USA_PrescottCardinals, not updated, 0.0<br />
+Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
+Denmark_AnimalFarmHilleroed, not updated, 0.0<br />
+Denmark_EvolutionparkInRoskilde, not updated, 0.0<br />
+Denmark_ChristmastreeInHilleroed kihagyva (100%), <br />
+Denmark_Drikkehorn kihagyva (100%), <br />
+Denmark_FCMidtjylland, not updated, 0.0<br />
+Denmark_RandersRegnskov, not updated, 0.0<br />
+Denmark_RandersSnowy, not updated, 0.0<br />
+Denmark_SonicRanders, not updated, 0.0<br />
+Denmark_FlatHammel kihagyva (100%), <br />
+Denmark_GrenaaAmethyst kihagyva (100%), <br />
+Denmark_GrenaaBigAmethyst kihagyva (100%), <br />
+Denmark_GrenaaFerry kihagyva (100%), <br />
+Denmark_GrenaaSapphireAndAmethyst kihagyva (100%), <br />
+Denmark_HeartOfValentine kihagyva (100%), <br />
+Denmark_Evolution2019Hammel, not updated, 0.0<br />
+Denmark_NextStopTilst kihagyva (100%), <br />
+Denmark_SilkeborgMario kihagyva (100%), <br />
+Denmark_TranbjergButterfly kihagyva (100%), <br />
+Denmark_TrueForestFish kihagyva (100%), <br />
+Denmark_TrueForestSurprise kihagyva (100%), <br />
+Denmark_AppleInAarhus kihagyva (100%), <br />
+Denmark_GardenOfJewels kihagyva (100%), <br />
+Denmark_OnyxCitrineParkInHammel kihagyva (100%), <br />
+Denmark_SilkeborgCoatOfArms kihagyva (100%), <br />
+Denmark_SilkeborgRainbowUnicorn kihagyva (100%), <br />
+Denmark_SilkeborgHexagon kihagyva (100%), <br />
+Denmark_SilkeborgOwl kihagyva (100%), <br />
+Denmark_SilkeborgNightOwl kihagyva (100%), <br />
+Denmark_GrenaaHeart2022 kihagyva (100%), <br />
+UnitedKingdom_PegasusLure, not updated, 0.0<br />
+USA_ValentineHeartCapeCanaveral kihagyva (100%), <br />
+UnitedKingdom_RIPQueenElizabethIICrown kihagyva (100%), <br />
+UnitedKingdom_ChallockChimp, not updated, 0.0<br />
+UnitedKingdom_LittleBurtonApple, not updated, 0.0<br />
+UnitedKingdom_AshfordKentClanWars, not updated, 0.0<br />
+UnitedKingdom_AshfordVariety kihagyva (100%), <br />
+UnitedKingdom_ShoeburyVirtuals, not updated, 0.0<br />
+UnitedKingdom_SCGVirtualField, not updated, 0.0<br />
+UnitedKingdom_KentQueensCrown kihagyva (100%), <br />
+UnitedKingdom_EvoPlusGarden kihagyva (100%), <br />
+UnitedKingdom_Nipper kihagyva (100%), <br />
+UnitedKingdom_HayesRainbow kihagyva (100%), <br />
+UnitedKingdom_UnionJack kihagyva (100%), <br />
+UnitedKingdom_SunnyRainbow kihagyva (100%), <br />
+UnitedKingdom_MaattmoosMoo kihagyva (100%), <br />
+UnitedKingdom_LoveLanePatchwork, not updated, 0.0<br />
+UnitedKingdom_FavershamCrossbow kihagyva (100%), <br />
+UnitedKingdom_RainbowHeart kihagyva (100%), <br />
+UnitedKingdom_CanterburyVictoriaPark kihagyva (100%), <br />
+UnitedKingdom_MrKnowItOwl, not updated, 0.0<br />
+UnitedKingdom_ChristmasGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_InMemoryOfPam kihagyva (100%), <br />
+UnitedKingdom_LittleLotties1st, not updated, 0.0<br />
+UnitedKingdom_SuperpeggysVirtual, not updated, 0.0<br />
+UnitedKingdom_HelpForHingham, not updated, 0.0<br />
+UnitedKingdom_NotRudolph, not updated, 0.0<br />
+UnitedKingdom_MadHatter, not updated, 0.0<br />
+UnitedKingdom_NVG kihagyva (100%), <br />
+UnitedKingdom_EveryColour kihagyva (100%), <br />
+UnitedKingdom_NaomisSloth kihagyva (100%), <br />
+UnitedKingdom_VirtualJewels, not updated, 0.0<br />
+UnitedKingdom_WorsteadForNorkie kihagyva (100%), <br />
+UnitedKingdom_PercyThePenguinVisitsTheSeaside kihagyva (100%), <br />
+UnitedKingdom_SeasideIcesInCromer, not updated, 0.0<br />
+UnitedKingdom_RobinRedbreast, not updated, 0.0<br />
+UnitedKingdom_SheringhamJewelSquare, not updated, 0.0<br />
+UnitedKingdom_IceCreamCone, not updated, 0.0<br />
+UnitedKingdom_VirtualLove, not updated, 0.0<br />
+UnitedKingdom_ShireHorseSanctuary kihagyva (100%), <br />
+UnitedKingdom_ChalkReefScubaDiver kihagyva (100%), <br />
+UnitedKingdom_CromersGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
+UnitedKingdom_HMSVictory, not updated, 0.0<br />
+UnitedKingdom_RetroBunzee kihagyva (100%), <br />
+UnitedKingdom_DenverWindmill kihagyva (100%), <br />
+Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+llamah_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zmk6nyww/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/llamah_empty.json" target="_blank">json</a><br />
+PeachesnCream_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zmk6hw2m/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/PeachesnCream_empty.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.01.29 01:53:09<br />
+összesen 2577<br />
