--- a/feladat.html
+++ b/feladat.html
@@ -223,3 +223,4 @@ Hungary_TocoskertsArrows3, not updated, 0.0<br />
 Hungary_60Color kihagyva (100%), <br />
 Hungary_Cata-Joy kihagyva (100%), <br />
 Hungary_FlatDebrecen, <b>updated</b>, 273, <a href="https://www.munzee.com/map/u2rqk56jy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_FlatDebrecen.json" target="_blank">json</a><br />
+Hungary_Debrecen2202, <b>updated</b>, 123, <a href="https://www.munzee.com/map/u2rqk5cfd/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Debrecen2202.json" target="_blank">json</a><br />
