--- a/feladat.html
+++ b/feladat.html
@@ -153,3 +153,26 @@ USA_LightningBoltInSapphire kihagyva (100%), <br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, <b>updated</b>, 830, <a href="https://www.munzee.com/map/udbvv1pgw/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_TampereElectric.json" target="_blank">json</a><br />
+USA_MontgomeryBaseball kihagyva (100%), <br />
+USA_HanksBoots, not updated, 0.0<br />
+USA_ColorTheZoo, not updated, 0.0<br />
+Netherlands_SupermanVsBatman kihagyva (100%), <br />
+Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
+Slovakia_IcemenInLove kihagyva (100%), <br />
+Slovakia_TrencinCastle, not updated, 0.0<br />
+UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
+Australia_PiratePetesParrot kihagyva (100%), <br />
+UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
+UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
+UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
+USA_PiratesTreasure kihagyva (100%), <br />
+Australia_QueenslandKoala kihagyva (100%), <br />
+USA_GiraffeInGadsden kihagyva (100%), <br />
+USA_AnaheimSapphire kihagyva (100%), <br />
+Finland_HelsinkiColour kihagyva (100%), <br />
+USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
+Germany_SkylarkFeldlerche kihagyva (100%), <br />
+Netherlands_MysteryBikeField kihagyva (100%), <br />
+Australia_Brisbane, not updated, 0.0<br />
+Australia_EgyptianMask kihagyva (100%), <br />
+Germany_BerlinMunzeePin, <b>updated</b>, 785, <a href="https://www.munzee.com/map/u336wu956/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinMunzeePin.json" target="_blank">json</a><br />
