--- a/feladat.html
+++ b/feladat.html
@@ -224,3 +224,55 @@ Hungary_60Color kihagyva (100%), <br />
 Hungary_Cata-Joy kihagyva (100%), <br />
 Hungary_FlatDebrecen, not updated, -1.0<br />
 Hungary_Debrecen2202, <b>updated</b>, 128, <a href="https://www.munzee.com/map/u2rqk5cfd/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Debrecen2202.json" target="_blank">json</a><br />
+Hungary_EvolutionDebrecen kihagyva (100%), <br />
+Hungary_JewelSandwich, not updated, 0.0<br />
+Hungary_Cimbi kihagyva (100%), <br />
+Hungary_Picu kihagyva (100%), <br />
+Hungary_Honey kihagyva (100%), <br />
+Hungary_QR kihagyva (100%), <br />
+Hungary_DebreceniKereszt kihagyva (100%), <br />
+Hungary_60Flat kihagyva (100%), <br />
+UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
+UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
+UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
+UnitedKingdom_HeathrowFlatSquares, not updated, 0.519999999999996<br />
+UnitedKingdom_LondonUnderground, not updated, 0.0<br />
+UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
+UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
+UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
+UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
+UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
+UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
+UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
+UnitedKingdom_ShadesGarden kihagyva (100%), <br />
+UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.0<br />
+UnitedKingdom_SailingBoat kihagyva (100%), <br />
+UnitedKingdom_HendonCircle kihagyva (100%), <br />
+Australia_9thBirthdayInQueensland kihagyva (100%), <br />
+Australia_MayPole kihagyva (100%), <br />
+Australia_PyramidOBadges kihagyva (100%), <br />
+Australia_QLD-Dingo kihagyva (100%), <br />
+Australia_HappyTenMunzee kihagyva (100%), <br />
+Australia_QLDPerm-Temp, not updated, -42.0<br />
+Australia_UnicornInThePark kihagyva (100%), <br />
+Germany_Berlin-HighVoltage kihagyva (100%), <br />
+Germany_ColoursOfBerlin kihagyva (100%), <br />
+Germany_9thBirthdayInBerlin kihagyva (100%), <br />
+Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
+Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
+Hungary_Debrecen kihagyva (100%), <br />
+Hungary_DeoCachingClan kihagyva (100%), <br />
+Hungary_TocoskertsArrows kihagyva (100%), <br />
+UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
+UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
+Canada_OttawaCancerRibbon kihagyva (100%), <br />
+Canada_OttawaGoldfish kihagyva (100%), <br />
+Canada_BananaBread kihagyva (100%), <br />
+Canada_Elephriends kihagyva (100%), <br />
+Canada_LizzysUnicorn kihagyva (100%), <br />
+Canada_JeffsFarm kihagyva (100%), <br />
+UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
+Germany_JohnTheFab41 kihagyva (100%), <br />
+Germany_RingoTheFab4, not updated, 0.4399999999999977<br />
+Germany_GeorgeTheFab42, not updated, 0.0<br />
+Germany_PaulTheFab43, <b>updated</b>, 1329, <a href="https://www.munzee.com/map/u0w7yrd1n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PaulTheFab43.json" target="_blank">json</a><br />
